--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "compile-watch": "tsc --watch",
     "browserify": "bankai build dist/browser.js",
     "browserify-watch": "bankai start dist/browser.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run compile",
+    "test": "parallel-test 'dist/test/**/*.js'"
   },
   "author": "Tyler Murphy",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "bankai": "^9.15.0",
     "node-static": "^0.7.11",
     "npm-run-all": "^4.1.5",
+    "parallel-test": "0.0.3",
     "typescript": "^3.5.1"
   }
 }
